--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <section class="section">
             <div class="columns is-centered">
-                <div class="column is-four-fifths is-desctop">
+                <div class="column is-four-fifths is-desktop">
                     <div class=" title">
                         医療関係者の皆様へ
                     </div>
