--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </section>
 
         <section class="section">
-            <div class="columns is-centered">
-                <div class="column is-four-fifths is-desktop">
+            <div class="columns is-centered is-desktop">
+                <div class="column is-four-fifths ">
                     <div class=" title">
                         医療関係者の皆様へ
                     </div>
