--- a/index.html
+++ b/index.html
@@ -54,47 +54,55 @@
     </section>
 
     <div class="container">
-        <section class="section is-size-5">
-            <div class="title py-4">当院スタッフ</div>
+        <div class="columns is-centered">
+            <div class="column is-10 is-size-2 has-text-weight-bold has-background-warning-light py-4 my-6">ご挨拶
+            </div>
+        </div>
 
-            <div class="media">
-                <div class="media-left">
-                    <img src="src/profile01.jpg" width="280" height="280">
-                </div>
+        <section class="columns is-centered is-variable is-6">
+            <div class="column is-3">
+                <img src="src/profile01.jpg">
+            </div>
 
-                <div class="media-content px-4">
-                    <div class="title">炎の救急医 - M月 M喜</div>
-                    <div>
-                        訪問診療を通じて患者さまが自宅で安心して過ごせるよう、多くの疾患や生活環境問題に幅広く対応します。
-                        当院は24時間365日緊急往診体制をとっており、休日や深夜でも電話対応、必要に応じて医師がご自宅まで駆け付けます。
-                    </div>
+            <div class="column is-7">
+                <div class="title is-size-3">炎の救急医 - M月 M喜</div>
+                <div class="is-size-4">
+                    MM在宅クリニック院長のM月です。<br>
+                    私は愛知で生まれ育ち、東京や茨城の救急救命センターで医療を学びました。<br>
+                    日立市の救命救急センターで勤務する中で、地域のかかりつけ医（家庭医）が不足しているという思いが強くなりました。<br>
+                    特に「訪問診療」は患者さまやご家族の生活に焦点を当てた医療であり、医師を目指した時の理想の姿にもっとも近く、すぐに 自身の専門分野として従事する決意を固めました。<br>
+
+                    日立地区で家庭医として、訪問診療を通じて地域に根ざす医療を提供するため精進してまいります。<br>
+                    <br>
+
+                    <div class="has-text-right">MM在宅クリニック　院長 M月M喜</div>
                 </div>
             </div>
-            <div class="media">
-                <div class="media-left">
-                    <img src="src/profile02.jpg" width="280" height="280">
-                </div>
+        </section>
 
-                <div class="media-content px-4">
-                    <div class="title">看護師 - 田中 花</div>
-                    <div>
-                        訪問診療を通じて患者さまが自宅で安心して過ごせるよう、多くの疾患や生活環境問題に幅広く対応します。
-                        当院は24時間365日緊急往診体制をとっており、休日や深夜でも電話対応、必要に応じて医師がご自宅まで駆け付けます。
-                    </div>
+        <section class="columns is-centered is-variable is-6 my-4">
+            <div class="column is-3">
+                <img src="src/profile02.jpg">
+            </div>
+            <div class="column is-7">
+                <div class="title">看護師 - 田中 花</div>
+                <div class="is-size-4">
+                    訪問診療を通じて患者さまが自宅で安心して過ごせるよう、多くの疾患や生活環境問題に幅広く対応します。<br>
+                    当院は24時間365日緊急往診体制をとっており、休日や深夜でも電話対応、必要に応じて医師がご自宅まで駆け付けます。
                 </div>
             </div>
         </section>
 
         <section class="section">
             <div class="columns is-centered">
-                <div class="column is-four-fifths-desktop">
+                <div class="column is-11-desktop">
                     <div class=" title">
                         医療関係者の皆様へ
                     </div>
-                    <div class="is-size-4 py-4 has-text-weight-bold has-background-warning-light">
+                    <div class="is-size-3 py-4 has-text-weight-bold has-background-warning-light">
                         当院のスタンス
                     </div>
-                    <div class="content is-size-5">
+                    <div class="block py-4 is-size-4">
                         <p>当院は、24時間365日対応の在宅療養支援診療所です。<br>
                             夜間・休日・緊急時も医師が迅速に対応致します。<br></p>
 
@@ -106,7 +114,6 @@
                 </div>
             </div>
         </section>
-    </div>
 </body>
 
 </html>
