--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
 </head>
 
 <body>
-    <nav class="navbar is-light px-6 pt-2">
-        <div class="navbar-end is-size-4 has-text-danger">
-            TEL 0294-00-0000
-        </div>
-    </nav>
     <nav class="navbar is-light is-size-5 pb-1 px-4" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item has-text-weight-bold is-size-3" href="">
@@ -55,11 +50,12 @@
 
     <div class="container">
         <div class="columns is-centered">
-            <div class="column is-10 is-size-2 has-text-weight-bold has-background-warning-light py-4 my-6">ご挨拶
+            <div class="column is-10 has-background-warning-light py-4 mt-6">
+                <div class="is-size-2 has-text-weight-bold">ご挨拶</div>
             </div>
         </div>
 
-        <section class="columns is-centered is-variable is-6">
+        <section class="columns is-centered is-variable is-6 py-4">
             <div class="column is-3">
                 <img src="src/profile01.jpg">
             </div>
@@ -75,12 +71,38 @@
                     日立地区で家庭医として、訪問診療を通じて地域に根ざす医療を提供するため精進してまいります。<br>
                     <br>
 
-                    <div class="has-text-right">MM在宅クリニック　院長 M月M喜</div>
+                    <div class="has-text-right">MM在宅クリニック　院長</div>
+                </div>
+
+                <table class="table is-bordered is-striped is-size-4 py-2">
+                    <caption class="has-text-left py-2 has-text-weight-bold">略歴</caption>
+                    <tbody>
+                        <tr>
+                            <td>2013年-</td>
+                            <td>東京大学医学部附属病院 救急科専攻医</td>
+                        </tr>
+                        <tr>
+                            <td>2020年</td>
+                            <td>日立総合病院 救急集中治療科・救急総合診療科</td>
+                        </tr>
+                        <tr>
+                            <td>2024年</td>
+                            <td>MM在宅クリニック 開業</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <div class="is-size-4 py-2">
+                    <p class="has-text-weight-bold">所属学会</p>
+                    <ul>
+                        <li>日本救急医学会 専門医</li>
+                        <li>がん緩和ケア研修修了医</li>
+                    </ul>
                 </div>
             </div>
         </section>
 
-        <section class="columns is-centered is-variable is-6 my-4">
+        <section class="columns is-centered is-variable is-6 py-4">
             <div class="column is-3">
                 <img src="src/profile02.jpg">
             </div>
@@ -94,15 +116,15 @@
         </section>
 
         <section class="section">
-            <div class="columns is-centered">
+            <div class="columns is-centered py-4">
                 <div class="column is-11-desktop">
-                    <div class=" title">
+                    <div class="is-size-2 p-4 has-background-warning-light">
                         医療関係者の皆様へ
                     </div>
-                    <div class="is-size-3 py-4 has-text-weight-bold has-background-warning-light">
+                    <div class="is-size-3 py-4 has-text-weight-bold">
                         当院のスタンス
                     </div>
-                    <div class="block py-4 is-size-4">
+                    <div class="block is-size-4">
                         <p>当院は、24時間365日対応の在宅療養支援診療所です。<br>
                             夜間・休日・緊急時も医師が迅速に対応致します。<br></p>
 
