--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
         <div id="navMenu" class="navbar-menu">
             <div class="navbar-end">
-                <a class="navbar-item">
+                <a href="#about" class="navbar-item">
                     当院について
                 </a>
-                <a class="navbar-item">
+                <a href="#staff" class="navbar-item">
                     スタッフ紹介
                 </a>
-                <a class="navbar-item">
+                <a href="#医療関係者様" class="navbar-item">
                     医療関係者さまへ
                 </a>
                 <a class="navbar-item">
@@ -42,100 +42,109 @@
 
     <section class="hero is-fullheight" style="background-image: url('src/img.jpg');background-size:cover; ">
         <div class="hero-body">
-            <p class="title has-text-white is-size-1" style="text-shadow: #FC0 1px 0 10px;">
+            <p class="has-text-weight-bold has-text-white is-size-1" style="text-shadow: #FC0 1px 0 10px;">
                 「ていない」な医療を譲らない
             </p>
         </div>
     </section>
 
-    <div class="container">
-        <div class="columns is-centered">
-            <div class="column is-10 has-background-warning-light py-4 mt-6">
-                <div class="is-size-2 has-text-weight-bold">ご挨拶</div>
-            </div>
-        </div>
-
-        <section class="columns is-centered is-variable is-6 py-4">
-            <div class="column is-3">
-                <img src="src/profile01.jpg">
+    <div class="container is-max-widescreen">
+        <section class="section" id="about">
+            <div class="has-background-warning-light p-4 mb-4">
+                <div class="is-size-3 has-text-weight-bold">ご挨拶</div>
             </div>
 
-            <div class="column is-7">
-                <div class="title is-size-3">炎の救急医 - M月 M喜</div>
-                <div class="is-size-4">
-                    MM在宅クリニック院長のM月です。<br>
-                    私は愛知で生まれ育ち、東京や茨城の救急救命センターで医療を学びました。<br>
-                    日立市の救命救急センターで勤務する中で、地域のかかりつけ医（家庭医）が不足しているという思いが強くなりました。<br>
-                    特に「訪問診療」は患者さまやご家族の生活に焦点を当てた医療であり、医師を目指した時の理想の姿にもっとも近く、すぐに 自身の専門分野として従事する決意を固めました。<br>
-
-                    日立地区で家庭医として、訪問診療を通じて地域に根ざす医療を提供するため精進してまいります。<br>
-                    <br>
-
-                    <div class="has-text-right">MM在宅クリニック　院長</div>
+            <div class="columns is-variable is-6 py-4">
+                <div class="column is-4">
+                    <img src="src/profile01.jpg">
                 </div>
 
-                <table class="table is-bordered is-striped is-size-4 py-2">
-                    <caption class="has-text-left py-2 has-text-weight-bold">略歴</caption>
-                    <tbody>
-                        <tr>
-                            <td>2013年-</td>
-                            <td>東京大学医学部附属病院 救急科専攻医</td>
-                        </tr>
-                        <tr>
-                            <td>2020年</td>
-                            <td>日立総合病院 救急集中治療科・救急総合診療科</td>
-                        </tr>
-                        <tr>
-                            <td>2024年</td>
-                            <td>MM在宅クリニック 開業</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="column is-8" id="staff">
+                    <div class="title">炎の救急医 - M月 M喜</div>
+                    <div class="is-size-5">
+                        MM在宅クリニック院長のM月です。<br>
+                        私は愛知で生まれ育ち、東京や茨城の救急救命センターで医療を学びました。<br>
+                        日立市の救命救急センターで勤務する中で、地域のかかりつけ医（家庭医）が不足しているという思いが強くなりました。<br>
+                        特に「訪問診療」は患者さまやご家族の生活に焦点を当てた医療であり、医師を目指した時の理想の姿にもっとも近く、すぐに 自身の専門分野として従事する決意を固めました。<br>
 
-                <div class="is-size-4 py-2">
-                    <p class="has-text-weight-bold">所属学会</p>
-                    <ul>
-                        <li>日本救急医学会 専門医</li>
-                        <li>がん緩和ケア研修修了医</li>
-                    </ul>
+                        日立地区で家庭医として、訪問診療を通じて地域に根ざす医療を提供するため精進してまいります。<br>
+                        <br>
+
+                        <div class="has-text-right">MM在宅クリニック　院長</div>
+                    </div>
+
+                    <table class="table is-bordered is-striped is-size-5 py-2">
+                        <caption class="has-text-left py-2 has-text-weight-bold">略歴</caption>
+                        <tbody>
+                            <tr>
+                                <td>2013年-</td>
+                                <td>東京大学医学部附属病院 救急科専攻医</td>
+                            </tr>
+                            <tr>
+                                <td>2020年</td>
+                                <td>日立総合病院 救急集中治療科・救急総合診療科</td>
+                            </tr>
+                            <tr>
+                                <td>2024年</td>
+                                <td>MM在宅クリニック 開業</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <div class="is-size-5 py-2">
+                        <p class="has-text-weight-bold">所属学会</p>
+                        <ul>
+                            <li>日本救急医学会 専門医</li>
+                            <li>がん緩和ケア研修修了医</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="columns is-centered is-variable is-6 py-4">
-            <div class="column is-3">
+        <section class="section columns is-variable is-6 py-4">
+            <div class="column is-4">
                 <img src="src/profile02.jpg">
             </div>
-            <div class="column is-7">
+            <div class="column is-8">
                 <div class="title">看護師 - 田中 花</div>
-                <div class="is-size-4">
+                <div class="is-size-5">
                     訪問診療を通じて患者さまが自宅で安心して過ごせるよう、多くの疾患や生活環境問題に幅広く対応します。<br>
                     当院は24時間365日緊急往診体制をとっており、休日や深夜でも電話対応、必要に応じて医師がご自宅まで駆け付けます。
                 </div>
             </div>
         </section>
 
-        <section class="section">
-            <div class="columns is-centered py-4">
-                <div class="column is-11-desktop">
-                    <div class="is-size-2 p-4 has-background-warning-light">
-                        医療関係者の皆様へ
-                    </div>
-                    <div class="is-size-3 py-4 has-text-weight-bold">
-                        当院のスタンス
-                    </div>
-                    <div class="block is-size-4">
-                        <p>当院は、24時間365日対応の在宅療養支援診療所です。<br>
-                            夜間・休日・緊急時も医師が迅速に対応致します。<br></p>
+        <section class="section" id="医療関係者様">
+            <div class="is-size-3 p-4 has-background-warning-light">
+                医療関係者の皆様へ
+            </div>
+            <div class="is-size-4 py-4 has-text-weight-bold">
+                当院のスタンス
+            </div>
+            <div class="block is-size-5">
+                <p>当院は、24時間365日対応の在宅療養支援診療所です。<br>
+                    夜間・休日・緊急時も医師が迅速に対応致します。<br></p>
 
-                        <p>慢性疾患の方から重症疾患の方までどんな方も丁寧に対応させていただきます。</p>
+                <p>慢性疾患の方から重症疾患の方までどんな方も丁寧に対応させていただきます。</p>
 
-                        <p>ご紹介頂いた後も密に連携を取り、日常の診療でも迅速なレスポンスを心がけております。<br>
-                            どうぞお気軽にご連絡ください。</p>
-                    </div>
-                </div>
+                <p>ご紹介頂いた後も密に連携を取り、日常の診療でも迅速なレスポンスを心がけております。<br>
+                    どうぞお気軽にご連絡ください。</p>
             </div>
         </section>
+    </div>
+
+    <footer class="footer has-background-info-dark pb-6">
+        <div class="container is-max-widescreen">
+            <div class="content has-text-right has-text-white is-size-5">
+                <p>MM在宅クリニック 訪問診療・在宅医療<br>茨城県日立市●町</p>
+                <p>休診日　土曜日・日曜日<br>TEL: 042-306-3721 Mail: ●●@gmail.com</p>
+                <div class="is-size-6 has-text-centered">Copyright © MM在宅クリニック All
+                    Rights
+                    Reserved.</div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
