--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="is-size-3 has-text-weight-bold">ご挨拶</div>
             </div>
 
-            <div class="columns is-variable is-6 py-4">
+            <div class="columns is-tablet is-variable is-6 py-4">
                 <div class="column is-4">
                     <img src="src/profile01.jpg">
                 </div>
@@ -102,7 +102,7 @@
             </div>
         </section>
 
-        <section class="section columns is-variable is-6 py-4">
+        <section class="section columns is-tablet is-variable is-6 py-4">
             <div class="column is-4">
                 <img src="src/profile02.jpg">
             </div>
