--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
                 <div class="is-size-3 has-text-weight-bold">ご挨拶</div>
             </div>
 
-            <div class="columns is-tablet is-variable is-6 py-4">
+            <div class="columns is-variable is-6 py-4">
                 <div class="column is-4">
                     <img src="src/profile01.jpg">
                 </div>
@@ -100,19 +101,20 @@
                     </div>
                 </div>
             </div>
-        </section>
 
-        <section class="section columns is-tablet is-variable is-6 py-4">
-            <div class="column is-4">
-                <img src="src/profile02.jpg">
-            </div>
-            <div class="column is-8">
-                <div class="title">看護師 - 田中 花</div>
-                <div class="is-size-5">
-                    訪問診療を通じて患者さまが自宅で安心して過ごせるよう、多くの疾患や生活環境問題に幅広く対応します。<br>
-                    当院は24時間365日緊急往診体制をとっており、休日や深夜でも電話対応、必要に応じて医師がご自宅まで駆け付けます。
+            <div class="columns is-variable is-6 py-4">
+                <div class="column is-4">
+                    <img src="src/profile02.jpg">
+                </div>
+                <div class="column is-8">
+                    <div class="title">看護師 - 田中 花</div>
+                    <div class="is-size-5">
+                        訪問診療を通じて患者さまが自宅で安心して過ごせるよう、多くの疾患や生活環境問題に幅広く対応します。<br>
+                        当院は24時間365日緊急往診体制をとっており、休日や深夜でも電話対応、必要に応じて医師がご自宅まで駆け付けます。
+                    </div>
                 </div>
             </div>
+
         </section>
 
         <section class="section" id="医療関係者様">
